[WIP][FIX] Fix kanban view DnD on Firefox; fix row padding

--- a/src/views/KanbanBoardView.css
+++ b/src/views/KanbanBoardView.css
@@ -53,6 +53,7 @@ table.KanbanBoardView-board td {
     align-items: flex-start;
     width: 100%;
     height: 100%;
+    padding-bottom: 10px;
 }
 .KanbanBoardView-sticky-note {
     position: relative;
